<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sql"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- USER ALICE -->

    <TextView
        android:id="@+id/user1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/messagebox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine|textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/sendbutton1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/sendbutton_text" />

    <!-- USER BOB -->

    <TextView
        android:id="@+id/user2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/messagebox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine|textPersonName" />

    <Button
        android:id="@+id/sendbutton2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/sendbutton_text" />

    <Button
        android:id="@+id/view"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/view_data" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_data" />

</LinearLayout>
